rust/herb-highlighter/tests/snapshots/html_line_numbers_test__renders_line_number_elements_in_a_diff.snap
---
source: herb-highlighter/tests/html_line_numbers_test.rs
expression: "render_document_html(&document,\n&sink_options(LineNumberStyle::Element, DiffLayout::Unified))"
---
<figure class="herb-highlight herb-diff" data-herb-theme="onedark" data-herb-line-numbers="element">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line herb-diff-context" data-old-line="1" data-new-line="1"><span class="herb-line-number" data-line="1">1</span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-context" data-old-line="2" data-new-line="2"><span class="herb-line-number" data-line="2">2</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">one</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-removed" data-old-line="3"><span class="herb-line-number" data-line="3">3</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">t</span><mark class="herb-diff-inline-removed"><span class="herb-token-identifier">wo</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-added" data-new-line="3"><span class="herb-line-number" data-line="3">3</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">t</span><mark class="herb-diff-inline-added"><span class="herb-token-identifier">res</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-context" data-old-line="4" data-new-line="4"><span class="herb-line-number" data-line="4">4</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">tail</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-context" data-old-line="5" data-new-line="5"><span class="herb-line-number" data-line="5">5</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
