rust/herb-highlighter/tests/snapshots/html_line_numbers_test__renders_line_number_elements_in_a_file_listing.snap
---
source: herb-highlighter/tests/html_line_numbers_test.rs
expression: "render_document_html(&document,\n&sink_options(LineNumberStyle::Element, DiffLayout::Unified))"
---
<figure class="herb-highlight" data-herb-theme="onedark" data-herb-line-numbers="element">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line" data-line="1"><span class="herb-line-number" data-line="1">1</span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line" data-line="2"><span class="herb-line-number" data-line="2">2</span><span class="herb-token-whitespace">  </span><span class="herb-token-erb-start">&lt;%=</span> user.name <span class="herb-token-erb-end">%&gt;</span></span>
<span class="herb-line" data-line="3"><span class="herb-line-number" data-line="3">3</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">hello</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">p</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line" data-line="4"><span class="herb-line-number" data-line="4">4</span><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">world</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line" data-line="5"><span class="herb-line-number" data-line="5">5</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
